manifests/apps/minio/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: point-to-bucket
  namespace: minio
spec:
  addPrefix:
    prefix: /kpkgrepobin
