manifests/apps/minio/endpoints.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: minio
  namespace: minio
  labels:
    kubernetes.io/service-name: minio
addressType: IPv4
ports:
  - name: api
    protocol: TCP
    port: 9000
  - name: console
    protocol: TCP
    port: 9001
endpoints:
  - addresses:
      - "100.65.112.62" # tulip
    conditions:
      ready: true
