manifests/apps/minio/httproute-bin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-bin
  namespace: minio
spec:
  parentRefs:
    - name: gateway
      namespace: cert-manager

  hostnames:
    - "bin.kreato.dev"

  rules:
    - filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /kpkgrepobin
      backendRefs:
        - name: minio
          port: 9000
