manifests/apps/minio/httproute-s3.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-s3
  namespace: minio
spec:
  parentRefs:
    - name: main-gateway
      namespace: minio

  hostnames:
    - "s3.krea.to"

  rules:
    - backendRefs:
        - name: minio
          port: 9000
